<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_tutorial"/>
        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/tvHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/help_toast"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btnTutorialToast"/>

            <Button
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/help_dialog"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/btnTutorialDialog"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_tutorial_after"
            android:layout_below="@+id/buttonsLayout"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>